@@ -50,6 +50,11 @@ val wit_constr_with_bindings :
   glob_constr_and_expr with_bindings,
   constr with_bindings delayed_open) genarg_type
 
+val wit_open_constr_with_bindings :
+  (constr_expr with_bindings,
+  glob_constr_and_expr with_bindings,
+  constr with_bindings delayed_open) genarg_type
+
 val wit_bindings :
   (constr_expr bindings,
   glob_constr_and_expr bindings,
